# grove

./: .gitignore  .jscpd.json  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  deny.toml  mise.toml  release.toml  typos.toml
.claude-plugin/: install.sh  marketplace.json  plugin.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
agents/: grove.md
design/: 00-overview.md  01-architecture.md  02-implementation.md  03-stats-and-quality.md  04-test-plan.md  05-ci.md  06-claude-code-tasks.md  implementation-tasks.md
design/research/: CAPTURE-QUALITY.md  RETRIEVAL.md
documents/: decisions-and-context.md  edge-cases-and-risks.md  flaw-resolutions.md
hooks/: hooks.json
rules/: compound-gate.md
scripts/: sync-plugin-version.sh
skills/compound-maintain/: SKILL.md
skills/compound-reflect/: SKILL.md
skills/compound-search/: SKILL.md
skills/compound-skip/: SKILL.md
skills/compound-status/: SKILL.md
skills/maintain/: SKILL.md
skills/ref/: SKILL.md
skills/reflect/: SKILL.md
skills/search/: SKILL.md
skills/skip/: SKILL.md
skills/status/: SKILL.md
src/: config.rs  error.rs  lib.rs  main.rs  util.rs
src/backends/: fallback.rs  markdown.rs  mod.rs  total_recall.rs  total_recall_format.rs  traits.rs
src/cli/: backends_cmd.rs  clean.rs  consolidate.rs  debug.rs  eval.rs  init.rs  list.rs  maintain.rs  mod.rs  observe.rs  ref_cmd.rs  reflect.rs  retroflect.rs  review.rs  search.rs  sessions.rs  (+4 more)
(+61 files in other folders)
